--- a/MotoActions/res/xml/doze_settings.xml
+++ b/MotoActions/res/xml/doze_settings.xml
@@ -14,37 +14,20 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        android:title="@string/ambient_display_title">
 
     <SwitchPreference
-        android:key="always_on_display"
-        android:disableDependentsState="true"
-        android:title="@string/ambient_display_always_on_title"
-        android:summary="@string/ambient_display_always_on_summary"
-        android:persistent="false" />
+        android:key="gesture_pick_up"
+        android:defaultValue="true"
+        android:title="@string/pick_up_gesture_title"
+        android:summary="@string/pick_up_gesture_summary" />
 
-    <PreferenceCategory
-        android:key="pickup_sensor"
-        android:title="@string/pickup_sensor_title">
-
-        <SwitchPreference
-            android:key="gesture_pick_up"
-            android:defaultValue="false"
-            android:title="@string/pick_up_gesture_title"
-            android:summary="@string/pick_up_gesture_summary" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="proximity_sensor"
-        android:title="@string/proximity_sensor_title">
-
-        <SwitchPreference
-            android:key="gesture_hand_wave"
-            android:defaultValue="false"
-            android:title="@string/hand_wave_gesture_title"
-            android:summary="@string/hand_wave_gesture_summary" />
-
-    </PreferenceCategory>
+    <SwitchPreference
+        android:key="gesture_hand_wave"
+        android:defaultValue="true"
+        android:title="@string/hand_wave_gesture_title"
+        android:summary="@string/hand_wave_gesture_summary" />
 
 </PreferenceScreen>
